; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/misc/extr_pmic8xxx-pwrkey.c_pwrkey_press_irq.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/misc/extr_pmic8xxx-pwrkey.c_pwrkey_press_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }

@KEY_POWER = common dso_local global i32 0, align 4
@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @pwrkey_press_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pwrkey_press_irq(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.input_dev*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.input_dev*
  store %struct.input_dev* %7, %struct.input_dev** %5, align 8
  %8 = load %struct.input_dev*, %struct.input_dev** %5, align 8
  %9 = load i32, i32* @KEY_POWER, align 4
  %10 = call i32 @input_report_key(%struct.input_dev* %8, i32 %9, i32 1)
  %11 = load %struct.input_dev*, %struct.input_dev** %5, align 8
  %12 = call i32 @input_sync(%struct.input_dev* %11)
  %13 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %13
}

declare dso_local i32 @input_report_key(%struct.input_dev*, i32, i32) #1

declare dso_local i32 @input_sync(%struct.input_dev*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
